[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/frosted_glass.jpg" type="Texture" id=1]
[ext_resource path="res://resources/theme.tres" type="Theme" id=2]
[ext_resource path="res://Menu.gd" type="Script" id=3]
[ext_resource path="res://resources/menu_title.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/audio/click_002.ogg" type="AudioStream" id=5]

[sub_resource type="CanvasItemMaterial" id=1]

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 20.0
margin_top = 10.0
margin_right = 480.0
margin_bottom = 310.0
rect_min_size = Vector2( 460, 290 )
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 460.0
margin_bottom = 300.0

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_right = 460.0
margin_bottom = 36.0
rect_min_size = Vector2( 0, 35 )
custom_fonts/font = ExtResource( 4 )
text = "MENU"
align = 1

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 460.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 5

[node name="P1_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 0
text = "PLAYER 1 "

[node name="P1_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 204.0
margin_top = 4.0
margin_right = 460.0
margin_bottom = 31.0
size_flags_horizontal = 11
text = "GAMEPAD #1"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 460.0
margin_bottom = 93.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 5

[node name="P2_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 8
text = "PLAYER 2"

[node name="P2_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 204.0
margin_top = 4.0
margin_right = 460.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "CPU"
align = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 97.0
margin_right = 460.0
margin_bottom = 132.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 5

[node name="SFX_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 8
text = "SFX"

[node name="SFX_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 204.0
margin_top = 4.0
margin_right = 460.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "ON"
align = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 460.0
margin_bottom = 171.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 5

[node name="CPU_level_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 8
text = "CPU LEVEL"

[node name="CPU_level_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 204.0
margin_top = 4.0
margin_right = 460.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "1"
align = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 460.0
margin_bottom = 210.0
rect_min_size = Vector2( 0, 35 )
size_flags_horizontal = 5

[node name="Speed_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_right = 200.0
margin_bottom = 35.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 8
text = "SPEED"

[node name="Speed_label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
margin_left = 204.0
margin_top = 4.0
margin_right = 460.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "1"
align = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 214.0
margin_right = 460.0
margin_bottom = 244.0
rect_min_size = Vector2( 0, 30 )

[node name="HBoxContainer8" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 248.0
margin_right = 460.0
margin_bottom = 281.0

[node name="Start_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
margin_left = 39.0
margin_right = 189.0
margin_bottom = 33.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
size_flags_vertical = 0
text = "RESTART"

[node name="Back_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
visible = false
margin_left = 154.0
margin_right = 304.0
margin_bottom = 33.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
text = "BACK"

[node name="Quit_button" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer8"]
margin_left = 271.0
margin_right = 421.0
margin_bottom = 33.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 6
text = "QUIT"

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
